--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.3",
     "tailwindcss": "^4.1.10",
     "three": "^0.177.0"
   },
